Bug 424458 - Layout of "Appearance" section is broken and "Dysplay style" dropdown is blank after I reopen the settings window of a system monitor widget
Summary: Layout of "Appearance" section is broken and "Dysplay style" dropdown is blan...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Monitor widgets (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords:
: 429163 433197 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-07-20 11:12 UTC by Patrick Silva
Modified: 2021-03-02 22:32 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.2
Sentry Crash Report:


Attachments
screenshot after the step 2 (44.65 KB, image/png)
2020-07-20 11:12 UTC, Patrick Silva
Details
screenshot after the last step (45.27 KB, image/png)
2020-07-20 11:13 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-07-20 11:12:53 UTC
Created attachment 130278 [details]
screenshot after the step 2

STEPS TO REPRODUCE
1. addd any of the new system monitor widgets to desktop 
2. open the settings window of the just added widget
3. click on "Ok" button
4. reopen the settings window

OBSERVED RESULT
Compare the attached screenshots please.

EXPECTED RESULT
allways the result shown in the screenshot after the step 2

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.73.0
Qt Version: 5.14.2
Comment 1 Patrick Silva 2020-07-20 11:13:44 UTC
Created attachment 130279 [details]
screenshot after the last step
Comment 2 Patrick Silva 2020-10-17 10:53:46 UTC
Fixed on neon unstable, but it's still reproducible on Arch Linux running Plasma 5.20.
Comment 3 Nate Graham 2020-12-19 04:44:06 UTC
*** Bug 429163 has been marked as a duplicate of this bug. ***
Comment 4 Patrick Silva 2021-01-16 12:20:37 UTC
(In reply to Patrick Silva from comment #2)
> Fixed on neon unstable, but it's still reproducible on Arch Linux running
> Plasma 5.20.

Nevermind. It's still reproducible on neon unstable.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Comment 5 David Redondo 2021-02-26 09:44:03 UTC
*** Bug 433197 has been marked as a duplicate of this bug. ***
Comment 6 Bug Janitor Service 2021-03-01 09:49:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/683
Comment 7 David Redondo 2021-03-02 14:00:09 UTC
Git commit cfd0ba7806d454fe4b5d0e96a5e6cb8ab254fd8b by David Redondo.
Committed on 02/03/2021 at 13:59.
Pushed by davidre into branch 'master'.

Use separate face controller for appearance config

This is a workaround for the page being totally broken on when opened
again after the dialog was closed for the first time. Using a new controller
works around that.

M  +5    -3    applets/systemmonitor/systemmonitor/package/contents/ui/config/ConfigAppearance.qml
M  +7    -0    applets/systemmonitor/systemmonitor/systemmonitor.cpp
M  +3    -0    applets/systemmonitor/systemmonitor/systemmonitor.h

https://invent.kde.org/plasma/plasma-workspace/commit/cfd0ba7806d454fe4b5d0e96a5e6cb8ab254fd8b
Comment 8 David Redondo 2021-03-02 14:00:44 UTC
Git commit e94b3449eb9e0a7af3aabd9dc4da2395fdba136a by David Redondo.
Committed on 02/03/2021 at 14:00.
Pushed by davidre into branch 'Plasma/5.21'.

Use separate face controller for appearance config

This is a workaround for the page being totally broken on when opened
again after the dialog was closed for the first time. Using a new controller
works around that.


(cherry picked from commit cfd0ba7806d454fe4b5d0e96a5e6cb8ab254fd8b)

M  +5    -3    applets/systemmonitor/systemmonitor/package/contents/ui/config/ConfigAppearance.qml
M  +7    -0    applets/systemmonitor/systemmonitor/systemmonitor.cpp
M  +3    -0    applets/systemmonitor/systemmonitor/systemmonitor.h

https://invent.kde.org/plasma/plasma-workspace/commit/e94b3449eb9e0a7af3aabd9dc4da2395fdba136a