Use separate face controller for appearance config

This is a workaround for the page being totally broken on when opened
again after the dialog was closed for the first time. Using a new controller
works around that.
BUG:424458